--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --branco: #fff;
     --lilas-claro: #a32c0b;
     --azul-médio: #2f4dd1;
-    --amarelo:#cfe80d;
+    --amarelo:#17cf17;
 }
 /*corpo da página*/
 body {
