--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-*variaveis*/
+/*variaveis*/
 :root {
     --preto: #000;
     --branco: #fff;
-    --lilas-claro: #a32c0b;
+    --lilas-claro: #eb76db;
     --azul-médio: #2f4dd1;
-    --amarelo:#17cf17;
+    --amarelo:#cfe80d;
 }
 /*corpo da página*/
 body {
@@ -31,4 +31,43 @@ section {
 
 div {
     margin-right: 20px;/*margem a direita*/
+}
+
+h1 {
+font-size: 1.5rem;
+text-align: center;
+padding-top: 10px;
+}
+
+p {
+font-size: 1rem;
+text-align: center;
+padding-top: 0px;
+}
+
+.chamada-texto {
+margin-right: 20px;
+}
+
+.chamada {
+background: rgb(184, 156, 213);
+padding-bottom: 80px;
+padding-top: 80px;
+display: flex;
+justify-content: center;
+}
+
+img {
+width: 300px;
+height: 200px;
+}
+
+.outras-recomendacoes {
+display: flex;
+overflow-x: auto;
+gap: 20px;
+}
+
+h2 {
+margin-left: 30px;
 }
