--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 :root {
     --preto: #000;
     --branco: #fff;
-    --lilas-claro: #eb76db;
+    --lilas-claro: #76ebc4;
     --azul-médio: #2f4dd1;
     --amarelo:#cfe80d;
 }
@@ -22,7 +22,7 @@ header {
 }
 
 section {
-    background-color: var(--lilas-claro);/*cor de fundo*/
+    background-color: var(--verde-claro);/*cor de fundo*/
     padding-bottom: 80px;/*espaçamento inferior*/
     padding-top: 80px;/*espaçamento superior*/
     display: flex;/*alterar a disposição*/
