--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 :root {
     --preto: #000;
     --branco: #fff;
-    --lilas-claro: #76ebc4;
+    --verde-claro: #76ebc4;
     --azul-médio: #2f4dd1;
     --amarelo:#cfe80d;
 }
